--- a/Klipper/readme
+++ b/Klipper/readme
@@ -1,12 +1,11 @@
 I am trying to figure out how to run this code and am providing some notes as I get a handle of this. There are some tool differences between the original daksh design and my version namely the optical probe sensor will be used used but instead use a detachable probe but this could still use the same pin, also (just because I accidently purchased the EBB42 instead of the EBB36), the pin designation will be different in some cases since I also am using EBB36 too. Also, instead of 4 tools, I am just going to use 2. 
-<ul>
-<ol>
-<li>1. One of the things you need to do when installing this is that you need to move the files in the modules folder into  ~/klipper/klippy/extras/, not moving the modules directory and subdirectories, but the files in the directory/subdirectories. </li>
-<li>2. If you use less or more tools then just 4 (in my case I am using 2), then you need to make sure you indicate that. Here is a list of areas that may need to be modified:
-<ol>
 
-   <li>a. In toolchange_management.cfg, you have this code (currently I do not know what these gcode macros do)</li>
-<pre>
+1. One of the things you need to do when installing this is that you need to move the files in the modules folder into  ~/klipper/klippy/extras/, not moving the modules directory and subdirectories, but the files in the directory/subdirectories. 
+2. If you use less or more tools then just 4 (in my case I am using 2), then you need to make sure you indicate that. Here is a list of areas that may need to be modified:
+
+
+   a. In toolchange_management.cfg, you have this code (currently I do not know what these gcode macros do)
+```
 [gcode_macro CYCLE_ALL_TOOLS]
 gcode:
      SET_GCODE_VARIABLE MACRO=STORE_TOOLHEAD_POSITION VARIABLE=bypass_toolhead_position VALUE=1
@@ -34,10 +33,10 @@ gcode:
     {% endfor %}
     T0
     SET_GCODE_VARIABLE MACRO=STORE_TOOLHEAD_POSITION VARIABLE=bypass_toolhead_position VALUE=0
-</pre>
+```
 
 Here is the list of them:
-<ul>
+
 [gcode_macro STORE_TOOLHEAD_POSITION]
 [gcode_macro CLEAR_TOOLHEAD_POSITION]
 [gcode_macro RETRIEVE_TOOLHEAD_POSITION]
@@ -64,11 +63,11 @@ Here is the list of them:
 [gcode_macro TEST_TOOLS]
 [gcode_macro T_1]
 [gcode_macro SET_GLOBAL_Z_OFFSET]
-</ul>
 
-<li>b. Also in crash_detection.cfg there are indications to tools 1-4 so here this file also needs to be modified:
-<ul>
-<pre>
+
+b. Also in crash_detection.cfg there are indications to tools 1-4 so here this file also needs to be modified:
+
+```
 [gcode_macro VARIABLES_LIST]
 variable_tools:[0,1,2,3,4]   <- modify to [0,1]
 variable_active_tool:-1
@@ -87,13 +86,13 @@ variable_current_bed_temp:0
 variable_pause_type:0 # 0: No Error, 1:ToolChanger Error 2: Filament Error
 
 gcode:
-</pre>
+```
 
 
 In crash_detection.cfg, has these macros. 
 
 There is also a bunch fo gcode macros in crash_detection.cfg:
-<ul>
+
 [gcode_macro VARIABLES_LIST]
 [gcode_macro _EVALUATE_MACHINE_STATE_QUICK]
 [gcode_macro _EVALUATE_MACHINE_STATE]
@@ -109,15 +108,13 @@ There is also a bunch fo gcode macros in crash_detection.cfg:
 [gcode_macro VERIFY_TOOLCHANGE_DURING_PRINT]
 [gcode_macro RESET_TOOLCHANGER]
 [gcode_macro PAUSE_AND_ALERT]
-</ul>
 
-<li> 3. Also one thing not mentioned or set up in the original Daksh repo (when I was setting it up), is the [save_variables] module wasn't set up. So you need to set this up or you will get stuck:</li>
-<ul>
-<pre>
+
+3. Also one thing not mentioned or set up in the original Daksh repo (when I was setting it up), is the [save_variables] module wasn't set up. So you need to set this up or you will get stuck:</li>
+```
 [save_variables]
 filename:variable.cfg
-</pre>
-</ul>
+```
 
 
 
