--- a/Klipper/readme
+++ b/Klipper/readme
@@ -5,7 +5,7 @@ I am trying to figure out how to run this code and am providing some notes as I 
 
 
    a. In toolchange_management.cfg, you have this code (currently I do not know what these gcode macros do)
-```
+
 [gcode_macro CYCLE_ALL_TOOLS]
 gcode:
      SET_GCODE_VARIABLE MACRO=STORE_TOOLHEAD_POSITION VARIABLE=bypass_toolhead_position VALUE=1
@@ -33,7 +33,7 @@ gcode:
     {% endfor %}
     T0
     SET_GCODE_VARIABLE MACRO=STORE_TOOLHEAD_POSITION VARIABLE=bypass_toolhead_position VALUE=0
-```
+
 
 Here is the list of them:
 
@@ -66,7 +66,7 @@ Here is the list of them:
 
 
 b. Also in crash_detection.cfg there are indications to tools 1-4 so here this file also needs to be modified:
-
+markdown
 ```
 [gcode_macro VARIABLES_LIST]
 variable_tools:[0,1,2,3,4]   <- modify to [0,1]
