--- a/Klipper/readme
+++ b/Klipper/readme
@@ -120,6 +120,10 @@ Klipper/config/crash_detection.cfg:			SET_STATUS_LED_LOCK T={tool}
 Klipper/config/toolchanger.cfg:  SET_STATUS_LED_LOCK T={params.T}
 Klipper/config/toolchanger.cfg:    SET_STATUS_LED_LOCK T={tool}
 
+5. Needed to enable [force_move] in printer_config.cfg like so:
+[force_move]
+enable_force_move: True
+ 
 
 
 
