--- a/Klipper/readme
+++ b/Klipper/readme
@@ -120,10 +120,16 @@ Klipper/config/crash_detection.cfg:			SET_STATUS_LED_LOCK T={tool}
 Klipper/config/toolchanger.cfg:  SET_STATUS_LED_LOCK T={params.T}
 Klipper/config/toolchanger.cfg:    SET_STATUS_LED_LOCK T={tool}
 
-5. Needed to enable [force_move] in printer_config.cfg like so:
+5. Enabled [force_move] in printer_config.cfg like so:
 [force_move]
 enable_force_move: True
- 
+
+6. Commented out: SET_STATUS_LED_NOT_IN_USE
+Klipper/config/crash_detection.cfg:		  		SET_STATUS_LED_NOT_IN_USE T={tool}
+Klipper/config/crash_detection.cfg:  	 SET_STATUS_LED_NOT_IN_USE T={tool}
+
+
+
 
 
 
