--- a/Klipper/readme
+++ b/Klipper/readme
@@ -130,7 +130,7 @@ Klipper/config/crash_detection.cfg:  	 SET_STATUS_LED_NOT_IN_USE T={tool}
 
 7. In status_led.cfg, I had to remove all the tool references that are not being used, including the "neopixel cled" stuff 
 
-
+8. Had to add this, ktcc_dock_move_speed = 3000 in variables.cfg
 
 
 
